--- a/src/package.json
+++ b/src/package.json
@@ -60,6 +60,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "showdown": "^1.8.6"
   }
 }
