--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "build": "next build",
     "start": "next start"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
+    "antd": "^4.15.3",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.29.0"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "husky": "^6.0.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
