--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "antd": "^4.15.3",
+    "lodash": "^4.17.21",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-spring": "^9.1.2",
+    "rxjs": "^7.0.0",
     "sass": "^1.29.0"
   },
   "devDependencies": {
