--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "antd": "^4.15.3",
+    "lethargy": "^1.0.9",
     "lodash": "^4.17.21",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-spring": "^9.1.2",
+    "react-use-gesture": "^9.1.3",
     "rxjs": "^7.0.0",
     "sass": "^1.29.0"
   },
